Fixing small width issue, and changed overflow to auto so it only shows scrollbar when there is an overflow

--- a/css/appPages/appHome.css
+++ b/css/appPages/appHome.css
@@ -16,7 +16,7 @@
 .Display-Main {
   position: relative;
   display: inline-flex;
-  width: 100vw;
+  width: 100%;
   margin-top: 5vh;
   text-align: center;
   justify-content: center;
