--- a/css/appPartials/appFooter.css
+++ b/css/appPartials/appFooter.css
@@ -10,7 +10,7 @@
 footer {
   position: relative;
   top: 75px;
-  width: 100vw;
+  width: 100%;
   height: 185px;
   background-color: #454f59;
 }
