--- a/css/appPartials/appGeneral.css
+++ b/css/appPartials/appGeneral.css
@@ -22,6 +22,8 @@
 #Content-Main {
   margin-top: 80px;
   min-height: calc(100vh - 80px);
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 /* - - - - - - - - - - - - - - - - - - - - - - - - - -
