--- a/css/appPartials/appOffCanvasMenu.css
+++ b/css/appPartials/appOffCanvasMenu.css
@@ -181,7 +181,7 @@
 }
 
 .Sub-Menu ul {
-  overflow-y: scroll;
+  overflow-y: auto;
   height: calc(100% - 55px);
 }
 
